--- a/1.Python/pandas_basics_practice.ipynb
+++ b/1.Python/pandas_basics_practice.ipynb
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 105,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -562,21 +562,21 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>b</td>\n",
-       "      <td>trumpeters</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <td>c</td>\n",
        "      <td>plovers</td>\n",
        "      <td>1.5</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>g</td>\n",
-       "      <td>plovers</td>\n",
-       "      <td>5.5</td>\n",
+       "      <td>d</td>\n",
+       "      <td>spoonbills</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>h</td>\n",
+       "      <td>trumpeters</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -586,12 +586,12 @@
       "text/plain": [
        "             birds  age  visits\n",
        "labels                         \n",
-       "b       trumpeters  4.0       4\n",
        "c          plovers  1.5       3\n",
-       "g          plovers  5.5       2"
+       "d       spoonbills  NaN       4\n",
+       "h       trumpeters  NaN       2"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +600,7 @@
     "# loc we have to specify row index and column names\n",
     "# rows[2,3,7] = rows[b,c,g]\n",
     "\n",
-    "df.loc[['b','c','g'],['birds','age','visits']]"
+    "df.loc[['c','d','h'],['birds','age','visits']]"
    ]
   },
   {
