--- a/1.Python/pandas_basics_practice.ipynb
+++ b/1.Python/pandas_basics_practice.ipynb
@@ -598,7 +598,7 @@
    ],
    "source": [
     "# loc we have to specify row index and column names\n",
-    "# rows[2,3,7] = rows[b,c,g]\n",
+    "# rows[2,3,7] = rows[c,d,h]\n",
     "\n",
     "df.loc[['c','d','h'],['birds','age','visits']]"
    ]
