--- a/1.Python/1.Python Assignment.ipynb
+++ b/1.Python/1.Python Assignment.ipynb
@@ -660,7 +660,7 @@
     "    return coeff\n",
     "\n",
     "#driver program\n",
-    "#call extract function to seperate coeff and intercepts\n",
+    "#call extract function to seperate coeff and intercepts from equation\n",
     "coeff=extract_coeff_intercepter_from_line(Lines)\n",
     "\n",
     "#invoke find datapoint side of the plane of given \n",
@@ -715,27 +715,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "nZmpzHs_B-k-"
-   },
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input string: \"_,_,_,24\" and output: [6, 6, 6, 6]\n",
+      "Input string: \"40,_,_,_,60\" and output: [20, 20, 20, 20]\n",
+      "Input string: \"80,_,_,_,_\" and output: [16, 16, 16, 16, 16]\n",
+      "Input string: \"_,_,30,_,_,_,50,_,_\" and output: [10, 10, 12, 12, 12, 12, 4, 4, 4]\n",
+      "Input string: \"10_,_,30,_,_,_,50,_,_\" and output: [13, 13, 12, 12, 12, 12, 4, 4, 4]\n",
+      "Input string: \"_,_,30,_,_,_,50,_,_,20\" and output: [10, 10, 12, 12, 12, 12, 8, 8, 8]\n",
+      "Input string: \"10,_,_,30,_,_,_,50,_,_,20\" and output: [10, 10, 10, 12, 12, 12, 12, 8, 8, 8]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your python code here\n",
-    "# you can take the above example as sample input for your program to test\n",
-    "# it should work for any general input try not to hard code for only given input strings\n",
+    "import re\n",
     "\n",
-    "\n",
-    "# you can free to change all these codes/structure\n",
     "def curve_smoothing(string):\n",
-    "    # your code\n",
-    "    return #list of values\n",
+    "    #set the pattern as only numbers\n",
+    "    pattern = '\\d+'\n",
+    "    #re.findall function yields substring based on patter\n",
+    "    #in this case, it returns all numbers in the string\n",
+    "    num=re.findall(pattern, string)\n",
+    "    #convert number as integer\n",
+    "    num_lst=list(map(lambda x:int(x),num))\n",
     "\n",
-    "S=  \"_,_,30,_,_,_,50,_,_\"\n",
-    "smoothed_values= curve_smoothing(S)\n",
-    "print(# print above values)"
+    "    #convert all numbers to \"N\" to count as 1 character\n",
+    "    #otherwise, number 10 is counted as 2 characters\n",
+    "    string= re.sub(pattern,\"N\",string)\n",
+    "\n",
+    "    #empty string \n",
+    "    s=[]\n",
+    "\n",
+    "    #number that keeps last position of sub substring\n",
+    "    #this helps to substring \n",
+    "    last_position=0\n",
+    "\n",
+    "    #empty string dictionary holds, key and substring\n",
+    "    #substring patterns are N,_,_ | N,_,_N |_,_N \n",
+    "    s_dict={}\n",
+    "    #Step 1: split the string based on N and store key and sub string in dictionary\n",
+    "    for i,match in enumerate(re.finditer(\"N\", string)):\n",
+    "        #start() function gives the position of N\n",
+    "        p=match.start()\n",
+    "    \n",
+    "        #if the string contains only one number don't split the string\n",
+    "        if len(num_lst)==1:\n",
+    "            s_dict[i]=string\n",
+    "        #otherwise, split the string from lastposition till N identified\n",
+    "        else:\n",
+    "            s_dict[i]=string[last_position:p+1]\n",
+    "            #update the last position\n",
+    "            last_position=p\n",
+    "        \n",
+    "            #if the string doesn't end with N (like pattern N,_,_) , string split ignores trailing missing values\n",
+    "            #to fix the trailing missing values, from last position to till string end appended one more substring\n",
+    "            if i== len(num_lst)-1 and string[:-1]!='N':\n",
+    "                s_dict[i+1]=string[last_position:len(string)]\n",
+    "\n",
+    "    #Step 2: from partial string dictionary, fill the missing values based on the pattern\n",
+    "    # if the substring pattern is \"N,_,_\" then level the string (missing values and number) with one number\n",
+    "    # Example _,_,_,24--> 6,6,6,6 | 80,_,_,_,_  --> 16,16,16,16,16\n",
+    "\n",
+    "    # if the substring pattern is \"N,_,_N\" then level the string (missing values and number) with sum of N1+N2\n",
+    "    # Example 40,_,_,_,60--> 20,20,20,20,20.  \n",
+    "\n",
+    "    # pattern like N,_,_ tail portion of string would through out of index error \n",
+    "    # when it is compared with Number list. In this case, point to last number \n",
+    "    for i,substr in s_dict.items():\n",
+    "        #ignore if the substring doesn't contain anything \n",
+    "        if len(substr)>1:\n",
+    "            #identify number of characters in the substring.This includes N and _\n",
+    "            l_char=len(substr.split(\",\"))\n",
+    "            #if the substring contains only one Number then with that number level the substring  \n",
+    "            if substr.count(\"N\")==1:\n",
+    "                #index out of case fixed with pointing to last number in the string\n",
+    "                if i==len(num_lst):# index out of range\n",
+    "                    num=num_lst[i-1]\n",
+    "                else:\n",
+    "                    num =num_lst[i]\n",
+    "                num_tobe_smoothened=int((num)/l_char)\n",
+    "            #substring contains more than 1 (only 2 N is possible),level the substring with sum of N1 and N2\n",
+    "            else:\n",
+    "                num_tobe_smoothened=int((num_lst[i-1]+ num_lst[i])/l_char)\n",
+    "\n",
+    "            #update the last N with Number list to re distribute for next substring\n",
+    "            if i==len(num_lst):# index out of range\n",
+    "                num_lst[i-1]=num_tobe_smoothened\n",
+    "            else:\n",
+    "                num_lst[i]=num_tobe_smoothened\n",
+    "        \n",
+    "            #Append the string with numbers leveled.Since last N is ignored to get adjusted with next substring\n",
+    "            for j in range(l_char-1):\n",
+    "                s.append(num_tobe_smoothened)\n",
+    "            #if there is no more sub strings, append with last leveling number\n",
+    "            if i==len(s_dict)-1:\n",
+    "                s.append(num_tobe_smoothened)\n",
+    "    return s\n",
+    "\n",
+    "S1=\"_,_,_,24\"\n",
+    "S2=\"40,_,_,_,60\"\n",
+    "S3= \"80,_,_,_,_\"\n",
+    "S4=\"_,_,30,_,_,_,50,_,_\"\n",
+    "S5=\"10_,_,30,_,_,_,50,_,_\"\n",
+    "S6=\"_,_,30,_,_,_,50,_,_,20\"\n",
+    "S7=\"10,_,_,30,_,_,_,50,_,_,20\"\n",
+    "\n",
+    "print('Input string: \"{}\" and output: {}'.format(S1,curve_smoothing(S1)))\n",
+    "print('Input string: \"{}\" and output: {}'.format(S2,curve_smoothing(S2)))\n",
+    "print('Input string: \"{}\" and output: {}'.format(S3,curve_smoothing(S3)))\n",
+    "print('Input string: \"{}\" and output: {}'.format(S4,curve_smoothing(S4)))\n",
+    "print('Input string: \"{}\" and output: {}'.format(S5,curve_smoothing(S5)))\n",
+    "print('Input string: \"{}\" and output: {}'.format(S6,curve_smoothing(S6)))\n",
+    "print('Input string: \"{}\" and output: {}'.format(S7,curve_smoothing(S7)))\n",
+    "\n"
    ]
   },
   {
