Complete 10 questions with answers

--- a/1.Python/1.Python Assignment.ipynb
+++ b/1.Python/1.Python Assignment.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 131,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -62,7 +62,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "please enter matxix A detailsEnter the number of rows to keys in Ex: matrix 2X3 please enter 2\n",
+      "please enter matxix A details\n",
+      "Enter the number of rows to keys in Ex: matrix 2X3 please enter 2\n",
       "2\n",
       "Enter the number of cols to keys in Ex: matrix 2X3 please enter 3\n",
       "3\n",
@@ -73,7 +74,8 @@
       "4\n",
       "5\n",
       "6\n",
-      "please enter matxix B detailsEnter the number of rows to keys in Ex: matrix 2X3 please enter 2\n",
+      "please enter matxix B details\n",
+      "Enter the number of rows to keys in Ex: matrix 2X3 please enter 2\n",
       "3\n",
       "Enter the number of cols to keys in Ex: matrix 2X3 please enter 3\n",
       "2\n",
@@ -98,7 +100,6 @@
     }
    ],
    "source": [
-    "# it should work for any general input try not to hard code for only given input examples\n",
     "\n",
     "#function to validate the number is numeric or not. \n",
     "def is_valid_number(num):\n",
@@ -114,9 +115,7 @@
     "    col = input(\"Enter the number of cols to keys in Ex: matrix 2X3 please enter 3\\n\") \n",
     "    \n",
     "    #if both row and col are valid numbers then proceed, else throw exception and stop\n",
-    "    if is_valid_number(row) and \n",
-    "            is_valid_number(col) and \n",
-    "                int(row)>0 and int(col)>0:\n",
+    "    if is_valid_number(row) and is_valid_number(col) and int(row)>0 and int(col)>0:\n",
     "        row=int(row)\n",
     "        col=int(col)\n",
     "\n",
@@ -188,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -199,7 +198,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[79, 45, 45, 28, 100, 100, 79, 79, 27, 100, 79, 28, 27, 45, 100, 100, 100, 79, 45, 100, 13, 100, 45, 79, 13, 100, 79, 79, 79, 100, 13, 79, 45, 79, 100, 100, 100, 27, 100, 79, 13, 28, 100, 100, 45, 79, 79, 27, 79, 79, 45, 79, 79, 100, 79, 100, 79, 79, 28, 79, 45, 100, 79, 79, 100, 100, 100, 79, 79, 79, 27, 79, 79, 100, 10, 79, 100, 45, 100, 45, 28, 100, 27, 28, 100, 28, 79, 13, 45, 5, 27, 100, 27, 100, 45, 100, 100, 45, 100]\n"
+      "[27, 13, 100, 79, 79, 79, 13, 79, 79, 79, 45, 79, 45, 28, 79, 13, 79, 100, 28, 100, 100, 79, 10, 28, 79, 28, 100, 100, 13, 79, 45, 45, 45, 45, 79, 28, 45, 28, 79, 13, 100, 100, 28, 79, 79, 27, 79, 27, 10, 28, 28, 100, 100, 13, 6, 100, 79, 100, 45, 100, 27, 5, 13, 6, 79, 100, 13, 45, 100, 79, 79, 100, 100, 5, 79, 45, 79, 27, 28, 100, 79, 79, 79, 100, 79, 27, 79, 27, 79, 100, 100, 13, 100, 79, 100, 79, 100, 100, 100]\n"
      ]
     }
    ],
@@ -208,15 +207,8 @@
     "from functools import reduce\n",
     "from itertools import accumulate\n",
     "\n",
-    "# write your python code here\n",
-    "# you can take the above example as sample input for your program to test\n",
-    "# it should work for any general input try not to hard code for only given input examples\n",
-    "\n",
     "A = [0,5,27,6,13,28,100,45,10,79]\n",
-    "#sum = reduce(lambda a,b: int(a)+int(b),A)\n",
     "\n",
-    "\n",
-    "# you can free to change all these codes/structure\n",
     "def pick_a_number_from_list(A):\n",
     "    # Step 1: calculate sum using reduce function\n",
     "    sum=0\n",
@@ -272,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -356,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -369,7 +361,7 @@
      "text": [
       "Top 5 students : {'student8': 98, 'student10': 80, 'student2': 78, 'student5': 48, 'student7': 47}\n",
       "Least 5 students : {'student3': 12, 'student4': 14, 'student9': 35, 'student6': 43, 'student1': 45}\n",
-      "Students within IQR : {'student9': 35, 'student6': 43, 'student1': 45, 'student7': 47, 'student5': 48}\n",
+      "Students within IQR : {'student6': 43, 'student1': 45, 'student7': 47, 'student5': 48}\n",
       "IQR : 54.5\n"
      ]
     }
@@ -458,15 +450,16 @@
     "    \n",
     "    #calculate 25th percentile, 75th percentile / Inter Quartile Range [IQR]\n",
     "    Inter_Quartile_Range=find_IQR(Marks)\n",
-    "    \n",
+    "\n",
+    "    #number of students \n",
+    "    n = len(Marks)\n",
     "    #calculate first quartile. If 25th percentile is decimal, then round to higher side. \n",
     "    #use math.ceil method to round to higher side\n",
-    "    first_quartile = math.ceil(int(n/4))\n",
-    "    \n",
+    "    first_quartile = math.ceil(n/4)\n",
     "    #calculate third quartile. if 75th percentile (3/4) is decimal, then rounded to floor side\n",
     "    # use math.floor method to round to lower side\n",
     "    third_quartile = math.floor(3*n/4)\n",
-    "  \n",
+    " \n",
     "    #students within 25% and 75% \n",
     "    students_within_25_and_75=dict(list(stu_dict_sorted.items())[first_quartile:third_quartile])\n",
     "    \n",
@@ -508,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 138,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -598,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +835,7 @@
     "id": "RBz4pzlfB-lB"
    },
    "source": [
-    "<h3> Q8: Filling the missing values in the specified formate</h3>\n",
+    "<h3> Q8: Find the probabilities</h3>\n",
     "You will be given a list of lists, each sublist will be of length 2 i.e. [[x,y],[p,q],[l,m]..[r,s]]\n",
     "consider its like a martrix of n rows and two columns\n",
     "1. the first column F will contain only 5 uniques values (F1, F2, F3, F4, F5)\n",
@@ -872,28 +865,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "e-1giz1MB-lC"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "conditional probability P(F=F1|S==S1)= 1/4 \n",
+      "conditional probability P(F=F1|S==S2)= 1/3 \n",
+      "conditional probability P(F=F1|S==S3)= 0/3 \n",
+      "conditional probability P(F=F2|S==S1)= 1/4 \n",
+      "conditional probability P(F=F2|S==S2)= 1/3 \n",
+      "conditional probability P(F=F2|S==S3)= 1/3 \n",
+      "conditional probability P(F=F3|S==S1)= 0/4 \n",
+      "conditional probability P(F=F3|S==S2)= 1/3 \n",
+      "conditional probability P(F=F3|S==S3)= 1/3 \n",
+      "conditional probability P(F=F4|S==S1)= 1/4 \n",
+      "conditional probability P(F=F4|S==S2)= 0/3 \n",
+      "conditional probability P(F=F4|S==S3)= 1/3 \n",
+      "conditional probability P(F=F5|S==S1)= 1/4 \n",
+      "conditional probability P(F=F5|S==S2)= 0/3 \n",
+      "conditional probability P(F=F5|S==S3)= 0/3 \n"
+     ]
+    }
+   ],
    "source": [
-    "# write your python code here\n",
-    "# you can take the above example as sample input for your program to test\n",
-    "# it should work for any general input try not to hard code for only given input strings\n",
-    "\n",
-    "\n",
-    "\n",
-    "# you can free to change all these codes/structure\n",
+    "#function to compute conditional probabilities \n",
     "def compute_conditional_probabilites(A):\n",
-    "    # your code\n",
-    "    # print the output as per the instructions\n",
+    "    #extract samples from the given list\n",
+    "    samples_lst = set([x[1] for x in A])\n",
+    "    #extract probabilities from the given list\n",
+    "    probability_lst   =set([x[0] for x in A])\n",
+    "    #group probabilities gien sample s\n",
+    "    probgroup_lst =[list(filter(lambda x: x[1]==s, A)) for s in samples_lst ]\n",
+    "    \n",
+    "    #empty conditional probability dictionary\n",
+    "    cp_dict={} \n",
+    "    #extract all probabilities of given s \n",
+    "    for cs in probgroup_lst:\n",
+    "        # loop through all probabilites  \n",
+    "        for p in probability_lst:\n",
+    "            #filter the probabilites of p of given s\n",
+    "            cp=list(filter(lambda x: x[0]==p, cs))\n",
+    "            #append conditional probability dictionary \n",
+    "            #key as combination of probability and samples\n",
+    "            #value as conditional probability\n",
+    "            cp_dict[p+cs[0][1]]=str(len(cp))+'/'+str(len(cs))\n",
+    "            \n",
+    "    #sort the dictionary based on key\n",
+    "    cp_dict_sorted ={k: v for k,v in sorted(cp_dict.items(), key=lambda item: item[0])}\n",
+    "    #return\n",
+    "    return cp_dict_sorted\n",
     "\n",
+    "#driver \n",
+    "#sample probabilities\n",
     "A = [['F1','S1'],['F2','S2'],['F3','S3'],['F1','S2'],['F2','S3'],['F3','S2'],['F2','S1'],['F4','S1'],['F4','S3'],['F5','S1']]\n",
     "\n",
-    "compute_conditional_probabilites(A)"
+    "#invoke function to compute conditional probabilities\n",
+    "Probability_given_Cond= compute_conditional_probabilites(A)\n",
+    "\n",
+    "#print\n",
+    "for pc in Probability_given_Cond.items():\n",
+    "    print(\"conditional probability P(F={}|S=={})= {} \".format(pc[0][:2],pc[0][2:],pc[1]))\n"
    ]
   },
   {
@@ -924,27 +962,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "Ez7hlHK0B-lG"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of common words between S1, S2: 7 and the words are {'only', 'column', 'uniques', 'will', 'contain', 'the', 'values'} \n",
+      "Words in S1 but not in S2 {'5', 'F', 'first'}\n",
+      "Words in S2 but not in S1\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your python code here\n",
-    "# you can take the above example as sample input for your program to test\n",
-    "# it should work for any general input try not to hard code for only given input strings\n",
     "\n",
-    "# you can free to change all these codes/structure\n",
     "def string_features(S1, S2):\n",
-    "    # your code\n",
-    "    return a, b, c\n",
+    "    #split the string and store it set variables\n",
+    "    s1_lst=set(S1.split())\n",
+    "    s2_lst=set(S2.split())\n",
+    "    \n",
+    "    #Set intersection gives the common words between SET A and SET B \n",
+    "    a = set.intersection(s1_lst,s2_lst)\n",
+    "    \n",
+    "    #SET A - SET B gives words not in B but in A\n",
+    "    b = s1_lst-s2_lst\n",
+    "    \n",
+    "    #SET B - SET A gives words not in A but in B\n",
+    "    c = s2_lst-s1_lst\n",
+    "    \n",
+    "    #return\n",
+    "    return(a, b, c)\n",
     "\n",
+    "#sample Strings\n",
     "S1= \"the first column F will contain only 5 uniques values\"\n",
     "S2= \"the second column S will contain only 3 uniques values\"\n",
-    "a,b,c = string_features(S1, S2)\n",
-    "print(#the above values)"
+    "\n",
+    "#invoke the string features \n",
+    "common_words,Words_S1_not_in_S2,Words_S2_not_in_S1 = string_features(S1, S2)\n",
+    "\n",
+    "#number of words in common words\n",
+    "count = len(common_words)\n",
+    "#printing \n",
+    "print('Number of common words between S1, S2: {} and the words are {} '.format(count,common_words))\n",
+    "print('Words in S1 but not in S2 {}'.format(Words_S1_not_in_S2))\n",
+    "print('Words in S2 but not in S1'.format(Words_S2_not_in_S1))"
    ]
   },
   {
@@ -972,29 +1038,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "N9zkagyNB-lJ"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 0.19257593903009612\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your python code here\n",
-    "# you can take the above example as sample input for your program to test\n",
-    "# it should work for any general input try not to hard code for only given input strings\n",
+    "import math\n",
     "\n",
-    "\n",
-    "# you can free to change all these codes/structure\n",
+    "#function to compute log loss \n",
     "def compute_log_loss(A):\n",
-    "    # your code\n",
-    "    \n",
+    "    #number of points in list\n",
+    "    n=len(A)\n",
+    "    #initialize sum\n",
+    "    sum=0\n",
+    "    for i in A:\n",
+    "        sum+=i[0]*math.log10(i[1])\n",
+    "        \n",
+    "    #loss defined as (-1/n)* sum\n",
+    "    loss = (-1/n)*sum\n",
     "    return loss\n",
     "\n",
+    "#driver\n",
     "A = [[1, 0.4], [0, 0.5], [0, 0.9], [0, 0.3], [0, 0.6], [1, 0.1], [1, 0.9], [1, 0.8]]\n",
     "loss = compute_log_loss(A)\n",
-    "print(# the above loss)"
+    "print('loss: {}'.format(loss))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
