--- a/1.Python/1.Python Assignment.ipynb
+++ b/1.Python/1.Python Assignment.ipynb
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -973,9 +973,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of common words between S1, S2: 7 and the words are {'only', 'column', 'uniques', 'will', 'contain', 'the', 'values'} \n",
-      "Words in S1 but not in S2 {'5', 'F', 'first'}\n",
-      "Words in S2 but not in S1\n"
+      "Number of common words between S1, S2: 7 and the words are {'column', 'will', 'uniques', 'contain', 'only', 'the', 'values'} \n",
+      "Words in S1 but not in S2 {'5', 'first', 'F'}\n",
+      "Words in S2 but not in S1 {'S', '3', 'second'}\n"
      ]
     }
    ],
@@ -1010,7 +1010,7 @@
     "#printing \n",
     "print('Number of common words between S1, S2: {} and the words are {} '.format(count,common_words))\n",
     "print('Words in S1 but not in S2 {}'.format(Words_S1_not_in_S2))\n",
-    "print('Words in S2 but not in S1'.format(Words_S2_not_in_S1))"
+    "print('Words in S2 but not in S1 {}'.format(Words_S2_not_in_S1))"
    ]
   },
   {
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1049,7 +1049,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss: 0.19257593903009612\n"
+      "loss: 0.42430993457031635\n"
      ]
     }
    ],
@@ -1063,8 +1063,11 @@
     "    #initialize sum\n",
     "    sum=0\n",
     "    for i in A:\n",
+    "        #Y*(log10(Yscore))\n",
     "        sum+=i[0]*math.log10(i[1])\n",
-    "        \n",
+    "        #(1-Y)*log10(1-Yscore)\n",
+    "        sum+=(1-i[0])*math.log10(1-i[1])\n",
+    "\n",
     "    #loss defined as (-1/n)* sum\n",
     "    loss = (-1/n)*sum\n",
     "    return loss\n",
